[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nitter-twitter-search"
version = "1.0.0"
description = "AI agent skill for searching Twitter/X via Nitter with Camoufox anti-detect browser"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "shivam2014" }
]
keywords = ["twitter", "nitter", "ai-agents", "web-scraping", "camoufox", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "camoufox>=0.5.0",
    "playwright>=1.40.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
nitter-search = "nitter_search.cli:main"

[project.urls]
Homepage = "https://github.com/shivam2014/nitter-twitter-search"
Documentation = "https://github.com/shivam2014/nitter-twitter-search#readme"
Repository = "https://github.com/shivam2014/nitter-twitter-search.git"

[tool.hatch.build.targets.wheel]
packages = ["src/nitter_search"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
